# ThinkBayes_Temp

./: environment.yml  pyproject.toml
.history/code/: 01NaiveBayes_20240517133933.ipynb  01NaiveBayes_20240517134451.ipynb  04Hierarchical model for Rugby prediction_20240522111017.ipynb  04Hierarchical model for Rugby prediction_20240522111037.ipynb  04Hierarchical model for Rugby prediction_20240522111143.ipynb
code/: 001BASIC-DATA.ipynb  01NaiveBayes.ipynb  01temp.ipynb  03CausalInference.ipynb  04Hierarchical model for Rugby prediction.ipynb  06REG-Radon.ipynb  06Reg-Multilevel.ipynb  06Regression.ipynb  BayesianABtesting.ipynb  Calculating Excedd Deaths.ipynb  PF기획안.ipynb  chap08.ipynb
code/.ipynb_checkpoints/: Calculating Excedd Deaths-checkpoint.ipynb
code/PyMC/: 001BASIC-DATA.ipynb  01ABT-ttest.ipynb  01NaiveBayes.ipynb  03CausalInference.ipynb  04Hierarchical model for Rugby prediction.ipynb  06REG-Radon.ipynb  06Reg-Multilevel copy.ipynb  06Reg-Multilevel.ipynb  07Uplift.ipynb
code/SOCAR/: PF기획안.ipynb
code/ThinkBayes/: 01temp.ipynb  chap05.ipynb  chap06.ipynb  chap08.ipynb  montyhall.ipynb
